--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type = "text/css" href = "/default.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <div class="title">
             <h1>Mitchell Combs | Software Engineer</h1>
         </div>
-
+z
         <div class="nav">
         </div>
 
@@ -20,8 +21,8 @@
             <ul class = "nav-menu-items">
                 <li><a href="Index.html">Home</a></li>
                 <li><a href="Education.html">Education</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Experience</a></li>
+                <li><a href="Skills.html">Skills</a></li>
+                <li><a href="Experience.html">Experience</a></li>
             </ul>
         </div>
 
