--- a/Skills.html
+++ b/Skills.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type = "text/css" href = "/default.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
@@ -27,6 +28,39 @@
 
         <div class="secondary-info">
             <h1>Technical Skills</h1>
+        </div>
+
+        <div class="skills-content">
+            <div class="skills-card">
+                <i class="fas fa-database fa-4x"></i>
+                <h2>Database management</h2>
+                <h5>Experience with SQL and SQL server management studio</h5>
+            </div>
+            <div class="skills-card">
+                <i class="fab fa-windows fa-4x"></i>
+                <h2>Microsoft .Net development</h2>
+                <h5>Experience developing applications in the microsoft .Net development environment, primarily developing API
+                    implementations with C#
+                </h5>
+            </div>
+            <div class="skills-card">
+                <div>
+                    <i class="fab fa-html5 fa-4x"></i>
+                    <i class="fab fa-css3 fa-4x"></i>
+                    <i class="fab fa-js-square fa-4x"></i>
+                </div>
+                <h2>Front-end technologies</h2>
+                <h5>Experience developing Front-end componentry using technologies such as HTML, CSS and JS. Typical 
+                    projects are for use in combination with API implementations that I've also developed.
+                </h5>
+            </div>
+            <div class="skills-card" style = "grid-column: 2;">
+                <i class="fab fa-angular fa-4x"></i>
+                <h2>Angular framework</h2>
+                <h5>Experience developing single-page applications in the Angular framework, typically to serve as UI elements for 
+                    API implementations.
+                </h5>
+            </div>
         </div>
 
         <script src = "default.js"></script>
