--- a/Index.html
+++ b/Index.html
@@ -13,10 +13,10 @@
         <div class="title">
             <h1>Mitchell Combs | Software Engineer</h1>
         </div>
-        
+
         <div class="nav">
         </div>
-
+        <!-- Test -->
         <div class="nav-menu">
             <ul class = "nav-menu-items">
                 <li><a href="Index.html">Home</a></li>
