--- a/Education.html
+++ b/Education.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type = "text/css" href = "/Styling/default.css">
+    <link rel="stylesheet" type = "text/css" href = "Styling/default.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
@@ -19,7 +19,7 @@
 
         <div class="nav-menu">
             <ul class = "nav-menu-items">
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Education.html">Education</a></li>
                 <li><a href="Skills.html">Skills</a></li>
                 <li><a href="Experience.html">Experience</a></li>
@@ -32,19 +32,19 @@
 
         <div class="education-content">
             <div class="education-card">
-                <img src="/Images/High-School.jpg" alt="">
+                <img src="Images/High-School.jpg" alt="">
                 <h3>High School</h3>
                 <h6>I attended and graduated High-School from Taylor High in the Three Rivers School District, Class of 2011</h6>
             </div>
             <div class="education-card">
-                <img src="/Images/Signal-corps.jpg" alt="">
+                <img src="Images/Signal-corps.jpg" alt="">
                 <h3>Military Training</h3>
                 <h6>I got my technological feet wet at Fort Gordon in 2012, where I attended Vincent Hall to learn the
                     field of military satellite communications.
                 </h6>
             </div>
             <div class="education-card">
-                <img src="/Images/Max-technical.png" alt="">
+                <img src="Images/Max-technical.png" alt="">
                 <h3>Development Certification</h3>
                 <h6>After I completed my 6 year active duty tour, I attended MAX Technical Training's full-stack .Net development
                     bootcamp, where I learned how to produce functional software using technologies such as C# and the Angular 
