--- a/Skills.html
+++ b/Skills.html
@@ -19,7 +19,7 @@
 
         <div class="nav-menu">
             <ul class = "nav-menu-items">
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="ndex.html">Home</a></li>
                 <li><a href="Education.html">Education</a></li>
                 <li><a href="Skills.html">Skills</a></li>
                 <li><a href="Experience.html">Experience</a></li>
