--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Test -->
         <div class="nav-menu">
             <ul class = "nav-menu-items">
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Education.html">Education</a></li>
                 <li><a href="Skills.html">Skills</a></li>
                 <li><a href="Experience.html">Experience</a></li>
